# pyvfld

./: .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
pyvfld/: __init__.py  nomenclature.py  reader.py  utils.py
tests/: test_reader.py
tests/examples/: vfldAQ_Benelux_750m2018072500  vfldAQ_Benelux_750m201807250000  vfldenea43h22_00ppmbr0002023060100  vfldenea43h22_00ppmbr000202306010000  vfldenea43h22_00ppmbr000202306200303  vobs2018072500
