
[project]
name = "pyvfld"
version = "0.1.0"
description = "Read VFLD/Vobs files in python"
authors = [
    {name = "Leif Denby", email = "lcd@dmi.dk"},
]
dependencies = [
    "pandas>=2.0.2",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.3.2",
    "pre-commit>=3.3.3",
    "ipdb>=0.13.13",
]
